Overflow fix + Default Tab according to settings

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,5 +1,7 @@
 body {
     margin: 0;
+    width: 100%;
+    overflow: hidden;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
